--- a/timesheet.html
+++ b/timesheet.html
@@ -96,7 +96,7 @@
 						<a class="nav-link text-muted" href="D:\Project\vmhr\timesheet.html">Timesheet</a>
 					  </li>
 					  <li class="nav-item">
-						<a class="nav-link btn btn-info" href="#">Logout</a>
+						<a class="nav-link btn btn-info p-4" href="#">Logout</a>
 					  </li>    
 					</ul>
                    </div>  
@@ -104,8 +104,8 @@
 			
 			
 			  
-		<div class="col-sm-10" id="learning">
-			     <h2 class="text-muted text-center"><b>Learning</b></h2>
+		<div class="col-sm-10" id="timesheet">
+			     <h2 class="text-muted text-center"><b>Timesheet</b></h2>
 			     <div class="col-sm-5">				 
 					<div class="grid-item1">
 						<h4 class="text-muted mt-4">Learn MVC .NET</h4>
